fixing spacing

--- a/join.css
+++ b/join.css
@@ -6,29 +6,30 @@ body {
 	font-size: 16px;
 }
 .dropdown {
-	border: none;
+	border: 1px solid #e9e9e9;
 	background-color: white;
 	cursor: pointer;
 }
 .submit {
     background-color: white;
     border: none;
-    color: black
-    padding: 16px 32px;
+    color: black;
+    padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    margin: 4px 2px;
+    margin: 2px 2px;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
     cursor: pointer;
     border: 1px solid #296ebe;
+    position: relative;
+    left: 6%;
 }
 .submit:hover {
 	background-color: #296ebe;
 	color: white;
 }
-
 .intro p {
 	font-size: 18px;
 	margin: 0 10% 0 10%;
